--- a/notebooks/Annotation - Mean Value (Every Emotion).ipynb
+++ b/notebooks/Annotation - Mean Value (Every Emotion).ipynb
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "44c12dae",
    "metadata": {},
    "outputs": [],
    "source": [
     "PC_Num, Part_Num = 1540, 1\n",
-    "df_annotations = pd.read_excel(f'data/annotations.xlsx')"
+    "df_annotations = pd.read_excel(f'data/annotations_2.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "1f3de4b6",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e5d466d5",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "[146130 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
