--- a/notebooks/Investigation - Read audio.ipynb
+++ b/notebooks/Investigation - Read audio.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ae9df144",
    "metadata": {},
    "outputs": [],
@@ -70,6 +70,29 @@
     "from src.dataload import load_audio_data\n",
     "\n",
     "data, sr = load_audio_data(df_annotations, 1540, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "80ed2bfb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5919027,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
    ]
   }
  ],
