Annotations 2 actualizado solo con los tiempos de los features

--- a/notebooks/File - annotations_2.ipynb
+++ b/notebooks/File - annotations_2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2edc2acc",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e4f0629",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "65e37279",
    "metadata": {},
    "outputs": [],
@@ -75,242 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "id": "cf7010ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations_2['start_time'] = df_annotations_2['m_start_time']\n",
+    "df_annotations_2['end_time'] = df_annotations_2['m_end_time']\n",
+    "\n",
+    "df_annotations_2.drop(['m_start_time','m_end_time'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6ed1617e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Emotion</th>\n",
-       "      <th>Annotator</th>\n",
-       "      <th>PC_Num</th>\n",
-       "      <th>Part_Num</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>end_time</th>\n",
-       "      <th>m_start_time</th>\n",
-       "      <th>m_end_time</th>\n",
-       "      <th>Audio_Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MSP-Conversation_0002_1_007.csv</td>\n",
-       "      <td>Valence</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77.3370</td>\n",
-       "      <td>361.3548</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>284.0178</td>\n",
-       "      <td>MSP-Conversation_0002.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MSP-Conversation_0002_1_009.csv</td>\n",
-       "      <td>Valence</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77.3370</td>\n",
-       "      <td>361.3548</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>284.0178</td>\n",
-       "      <td>MSP-Conversation_0002.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MSP-Conversation_0002_1_010.csv</td>\n",
-       "      <td>Valence</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77.3370</td>\n",
-       "      <td>361.3548</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>284.0178</td>\n",
-       "      <td>MSP-Conversation_0002.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MSP-Conversation_0002_1_013.csv</td>\n",
-       "      <td>Valence</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77.3370</td>\n",
-       "      <td>361.3548</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>284.0178</td>\n",
-       "      <td>MSP-Conversation_0002.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MSP-Conversation_0002_1_015.csv</td>\n",
-       "      <td>Valence</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>77.3370</td>\n",
-       "      <td>361.3548</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>284.0178</td>\n",
-       "      <td>MSP-Conversation_0002.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12670</th>\n",
-       "      <td>MSP-Conversation_2281_4_015.csv</td>\n",
-       "      <td>Dominance</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3087.5345</td>\n",
-       "      <td>3366.8644</td>\n",
-       "      <td>909.3515</td>\n",
-       "      <td>1188.6814</td>\n",
-       "      <td>MSP-Conversation_2281.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12671</th>\n",
-       "      <td>MSP-Conversation_2281_4_017.csv</td>\n",
-       "      <td>Dominance</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3087.5345</td>\n",
-       "      <td>3366.8644</td>\n",
-       "      <td>909.3515</td>\n",
-       "      <td>1188.6814</td>\n",
-       "      <td>MSP-Conversation_2281.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12672</th>\n",
-       "      <td>MSP-Conversation_2281_4_018.csv</td>\n",
-       "      <td>Dominance</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3087.5345</td>\n",
-       "      <td>3366.8644</td>\n",
-       "      <td>909.3515</td>\n",
-       "      <td>1188.6814</td>\n",
-       "      <td>MSP-Conversation_2281.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12673</th>\n",
-       "      <td>MSP-Conversation_2281_4_019.csv</td>\n",
-       "      <td>Dominance</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3087.5345</td>\n",
-       "      <td>3366.8644</td>\n",
-       "      <td>909.3515</td>\n",
-       "      <td>1188.6814</td>\n",
-       "      <td>MSP-Conversation_2281.wav</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12674</th>\n",
-       "      <td>MSP-Conversation_2281_4_021.csv</td>\n",
-       "      <td>Dominance</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3087.5345</td>\n",
-       "      <td>3366.8644</td>\n",
-       "      <td>909.3515</td>\n",
-       "      <td>1188.6814</td>\n",
-       "      <td>MSP-Conversation_2281.wav</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12675 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  Name    Emotion  Annotator  PC_Num  \\\n",
-       "0      MSP-Conversation_0002_1_007.csv    Valence          7       2   \n",
-       "1      MSP-Conversation_0002_1_009.csv    Valence          9       2   \n",
-       "2      MSP-Conversation_0002_1_010.csv    Valence         10       2   \n",
-       "3      MSP-Conversation_0002_1_013.csv    Valence         13       2   \n",
-       "4      MSP-Conversation_0002_1_015.csv    Valence         15       2   \n",
-       "...                                ...        ...        ...     ...   \n",
-       "12670  MSP-Conversation_2281_4_015.csv  Dominance         15    2281   \n",
-       "12671  MSP-Conversation_2281_4_017.csv  Dominance         17    2281   \n",
-       "12672  MSP-Conversation_2281_4_018.csv  Dominance         18    2281   \n",
-       "12673  MSP-Conversation_2281_4_019.csv  Dominance         19    2281   \n",
-       "12674  MSP-Conversation_2281_4_021.csv  Dominance         21    2281   \n",
-       "\n",
-       "       Part_Num  start_time   end_time  m_start_time  m_end_time  \\\n",
-       "0             1     77.3370   361.3548        0.0000    284.0178   \n",
-       "1             1     77.3370   361.3548        0.0000    284.0178   \n",
-       "2             1     77.3370   361.3548        0.0000    284.0178   \n",
-       "3             1     77.3370   361.3548        0.0000    284.0178   \n",
-       "4             1     77.3370   361.3548        0.0000    284.0178   \n",
-       "...         ...         ...        ...           ...         ...   \n",
-       "12670         4   3087.5345  3366.8644      909.3515   1188.6814   \n",
-       "12671         4   3087.5345  3366.8644      909.3515   1188.6814   \n",
-       "12672         4   3087.5345  3366.8644      909.3515   1188.6814   \n",
-       "12673         4   3087.5345  3366.8644      909.3515   1188.6814   \n",
-       "12674         4   3087.5345  3366.8644      909.3515   1188.6814   \n",
-       "\n",
-       "                      Audio_Name  \n",
-       "0      MSP-Conversation_0002.wav  \n",
-       "1      MSP-Conversation_0002.wav  \n",
-       "2      MSP-Conversation_0002.wav  \n",
-       "3      MSP-Conversation_0002.wav  \n",
-       "4      MSP-Conversation_0002.wav  \n",
-       "...                          ...  \n",
-       "12670  MSP-Conversation_2281.wav  \n",
-       "12671  MSP-Conversation_2281.wav  \n",
-       "12672  MSP-Conversation_2281.wav  \n",
-       "12673  MSP-Conversation_2281.wav  \n",
-       "12674  MSP-Conversation_2281.wav  \n",
-       "\n",
-       "[12675 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_annotations_2.to_excel('')"
+    "df_annotations_2.to_excel('annotations_2.xlsx')"
    ]
   }
  ],
