--- a/notebooks/File - annotations_2.ipynb
+++ b/notebooks/File - annotations_2.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf7010ac",
    "metadata": {},
    "outputs": [],
@@ -88,12 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6ed1617e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_annotations_2.to_excel('annotations_2.xlsx')"
+    "df_annotations_2.to_excel('annotations_2.xlsx', index = False)"
    ]
   }
  ],
