--- a/notebooks/Investigation - Read audio data.ipynb
+++ b/notebooks/Investigation - Read audio data.ipynb
@@ -5,7 +5,7 @@
    "id": "8c64e739",
    "metadata": {},
    "source": [
-    "# Read Audio\n",
+    "# Read Audio data\n",
     "\n",
     "This notebook sets an example of how to read an audio and it's data"
    ]
@@ -74,25 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "80ed2bfb",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 11,
+   "id": "ed49acd7",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5919027,)"
+       "268.4365625"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "len(data) / sr"
    ]
   }
  ],
