--- a/notebooks/Investigation - Read audio data.ipynb
+++ b/notebooks/Investigation - Read audio data.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "import os\n",
     "import librosa\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -69,36 +70,58 @@
    "source": [
     "from src.dataload import load_audio_data\n",
     "\n",
-    "data, sr = load_audio_data(df_annotations, 1540, 1)"
+    "data, time = load_audio_data(df_annotations, 1540, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04145a61",
+   "metadata": {},
+   "source": [
+    "### Wave"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ed49acd7",
+   "execution_count": 9,
+   "id": "763c554f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "268.4365625"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(data) / sr"
+    "import wave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c71b6f12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_path = \"data/MSPCORPUS/Audio/\" + df_annotations[(df_annotations['PC_Num'] == PC_Num) & (df_annotations['Part_Num'] == Part_Num)].reset_index()['Audio_Name'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ea58f51a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = wave.open(audio_path,'r')\n",
+    "params = file.getparams()\n",
+    "nchannels, sampwidth, framerate, wav_length = params[:4]\n",
+    "wavedata = np.frombuffer(file.readframes(wav_length), dtype = np.short)\n",
+    "time = np.arange(0,wav_length) * (1.0/framerate)"
    ]
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "SER",
    "language": "python",
-   "name": "test2"
+   "name": "ser"
   },
   "language_info": {
    "codemirror_mode": {
@@ -110,7 +133,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.12"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
