--- a/notebooks/Investigation - Read audio data.ipynb
+++ b/notebooks/Investigation - Read audio data.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "763c554f",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "c71b6f12",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "ea58f51a",
    "metadata": {},
    "outputs": [],
@@ -113,6 +113,49 @@
     "nchannels, sampwidth, framerate, wav_length = params[:4]\n",
     "wavedata = np.frombuffer(file.readframes(wav_length), dtype = np.short)\n",
     "time = np.arange(0,wav_length) * (1.0/framerate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d8d616c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([139, 103,  76, ...,  -4,   8,   1], dtype=int16)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wavedata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d53feb0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 6.25000000e-05, 1.25000000e-04, ...,\n",
+       "       9.35324313e+02, 9.35324375e+02, 9.35324438e+02])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time"
    ]
   }
  ],
