--- a/notebooks/Traduccion VAD - Ekman.ipynb
+++ b/notebooks/Traduccion VAD - Ekman.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "os.chdir(os.path.abspath(\"..\"))\n",
     "\n",
-    "from src.dataload import audio_select_mean_vote, ekman_emotion"
+    "from src.dataload import audio_select_mean_vote\n",
+    "from src.emotion_translation import ekman_emotion"
    ]
   },
   {
