--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 1- Explorar las diferentes formas de obtener la data de un audio (Actualmente se usa librosa).
 2- Mappging VAD to categorical emotions (***WILTON***)                                                              [PROGRESS]
-3- Explorar emotion models (Ekman,  Plutchik's Wheel of Emotions,  Geneva Emotion Wheel)
+3- Explorar emotion models (Ekman,  Plutchik's Wheel of Emotions,  Geneva Emotion Wheel) (***PAULO***)
 4- Reproducir un audio segmentado (Audio - Segmented Reproduction)
 5- Re revisar a profundidad el tema start time (***EMA***)                                                          [COMPLETADO]
-6- Ver como minimizar cantidad de datapoints en el target (estilo drop duplicates) (IMPORTANTE Y PROBLEMATICO)
+6- Ver como minimizar cantidad de datapoints en el target (estilo drop duplicates) (IMPORTANTE Y PROBLEMATICO) (***PAULO***)
 7- Estudiar distintas funciones de votación para las emociones (weigthed mean avg o avg simple u otra opción) (***WILTON***)  
 8- Transcripciones para NLP (Recomendacion de Rodrigo) (Código de transcripcion de Paulo)
 9- Estudiar openSmile
