--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,12 @@
-1- Explorar las diferentes formas de obtener la data de un audio (Actualmente se usa librosa).
-2- Mappging VAD to categorical emotions (***WILTON***)                                                              [PROGRESS]
-3- Explorar emotion models (Ekman,  Plutchik's Wheel of Emotions,  Geneva Emotion Wheel) (***PAULO***)
-4- Reproducir un audio segmentado (Audio - Segmented Reproduction)
-5- Re revisar a profundidad el tema start time (***EMA***)                                                          [COMPLETADO]
-6- Ver como minimizar cantidad de datapoints en el target (estilo drop duplicates) (IMPORTANTE Y PROBLEMATICO) (***PAULO***)
-7- Estudiar distintas funciones de votación para las emociones (weigthed mean avg o avg simple u otra opción) (***WILTON***)  
-8- Transcripciones para NLP (Recomendacion de Rodrigo) (Código de transcripcion de Paulo)
-9- Estudiar openSmile
-10- Estudiar modelos de Hugginface (***WILTON***)                                                                   [PROGRESS]
+1- Explorar las diferentes formas de obtener la data de un audio (Actualmente se usa librosa).                          (***PAULO***)
+2- Mappging VAD to categorical emotions                                                                                 (***WILTON***)  [PROGRESS]
+3- Explorar emotion models (Ekman,  Plutchik's Wheel of Emotions,  Geneva Emotion Wheel)                                (***PAULO***)
+4- Reproducir un audio segmentado (Audio - Segmented Reproduction)                                                      (***EMA***)
+5- Re revisar a profundidad el tema start time                                                                          (***EMA***)     [COMPLETADO]
+6- Ver como minimizar cantidad de datapoints en el target (estilo drop duplicates) (IMPORTANTE Y PROBLEMATICO)          (***PAULO***)
+7- Estudiar distintas funciones de votación para las emociones (weigthed mean avg o avg simple u otra opción)           (***WILTON***)  
+8- Transcripciones para NLP (Recomendacion de Rodrigo) (Código de transcripcion de Paulo)                               (***EMA***)     [PROGRESS]
+9- Estudiar muy poco openSmile                                                                                          (***EMA***)
+10- Estudiar modelos de Hugginface                                                                                      (***WILTON***)  [PROGRESS]
 11- Investigar como usar audios separados por persona que habla
+12- Usar balance cooncordation correlation index en vez de ekman                                                        (***PAULO***)
